--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: ./techtrends/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: sbodrero/python-helloworld:latest
+          tags: sbodrero/techtrends:latest
