--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -35,8 +35,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./techtrends
-          file: ./Dockerfile
+          context: .
+          file: ./techtrends/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: sbodrero/techtrends:latest
