--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -25,8 +25,7 @@ spec:
         imagePullPolicy: {{ .Values.image.imagePullPolicy }}
         name: techtrends
         ports:
-        - name: http
-          containerPort: {{ .Values.image.ports.containerPort }}
+        - containerPort: {{ .Values.image.ports.containerPort }}
         livenessProbe:
           httpGet:
             path: /healthz
