--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,15 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: techtrends
   name: techtrends
   namespace: sandbox
 spec:
   ports:
-    - protocol: TCP
-      port: 4111
+    - port: 4111
+      protocol: TCP
       targetPort: 3111
-  selector:
-    app: techtrends
   type: ClusterIP
