--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -16,3 +16,13 @@ resources:
 
 service:
   port: 7111
+
+livenessProbe:
+  httpGet:
+    path: /healthz
+    port: 3111
+
+readinessProbe:
+  httpGet:
+    path: /healthz
+    port: 3111
