--- a/helm/values-staging.yaml
+++ b/helm/values-staging.yaml
@@ -13,3 +13,13 @@ resources:
 
 service:
   port: 5111
+
+livenessProbe:
+  httpGet:
+    path: /healthz
+    port: 3111
+
+readinessProbe:
+  httpGet:
+    path: /healthz
+    port: 3111
