--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -23,3 +23,13 @@ service:
   port: 4111
   protocol: TCP
   targetPort: 3111
+
+livenessProbe:
+  httpGet:
+    path: /healthz
+    port: 3111
+
+readinessProbe:
+  httpGet:
+    path: /healthz
+    port: 3111
