--- a/helm/templates/deploy.yaml
+++ b/helm/templates/deploy.yaml
@@ -30,4 +30,5 @@ spec:
 {{ toYaml .Values.livenessProbe | indent 12 }}
         readinessProbe:
 {{ toYaml .Values.readinessProbe | indent 12 }}
+        resources:
 {{ toYaml .Values.resources | indent 12 }}
